Обновил локализацию в HTML и JSON файлах, изменил текст на английском и грузинском языках, добавил атрибуты для локализации в index.html, улучшил структуру разметки для лучшей читаемости и поддержки i18n.

--- a/i18n/en/src/index.html
+++ b/i18n/en/src/index.html
@@ -23,9 +23,7 @@
             </picture>
         </div>
         <div class="nav-contacts">
-            <a class="sales-link" href="#sales">
-                Акции 🫰
-            </a>
+            <a class="sales-link" href="#sales">Promotions 🫰</a>
             <ul class="contacts_icons">
                 <li class="contacts_icon">
                     <a href="https://www.instagram.com/sto_batumi/">
@@ -84,25 +82,19 @@
                     </div>
                 </li>
                 <li class="list_item number_cnt">
-                    <div class="number_value counter" data-start="0" data-duration="2000">
-                        15 лет
-                    </div>
+                    <div class="number_value counter" data-start="0" data-duration="2000">15 years</div>
                     <div class="number_text">
                         <span>average experience of masters</span>
                     </div>
                 </li>
                 <li class="list_item number_cnt">
-                    <div class="number_value counter" data-start="0" data-duration="2000">
-                        3 года
-                    </div>
+                    <div class="number_value counter" data-start="0" data-duration="2000">3 years</div>
                     <div class="number_text">
                         <span>in Batumi</span>
                     </div>
                 </li>
                 <li class="list_item number_cnt">
-                    <div class="number_value counter" data-start="0" data-duration="2000">
-                        7 дней
-                    </div>
+                    <div class="number_value counter" data-start="0" data-duration="2000">7 days</div>
                     <div class="number_text">
                         <span>7 days a week, from 10 AM to 7 PM</span>
                     </div>
@@ -155,7 +147,10 @@
         <div class="content content_wide animate-once" data-delay="0.4s">
             <h2>Services and Specialization</h2>
             <ul class="list list_wide">
-                <li class="list_item">Maintenance ☆</li>
+                <li class="list_item">
+                    <img class="list_item__img" src="..\../../img/oil.svg" alt>
+                    <span>Maintenance ☆</span>
+                </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/car-repair.svg" alt>
                     <span>Diagnostics ☆</span>
@@ -191,18 +186,30 @@
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/speedometer.svg" alt>
-                    <span>Interior Assembly/Disassembly</span>
+                    <span>Interior Assembly / Disassembly</span>
                 </li>
 
             </ul>
             <h2 class="toggle" data-for="#not">What We DON'T Do</h2>
             <ul class="list hidden" id="not">
-                <li class="list_item">Automatic transmission repair, but we can replace the entire gearbox or change the oil</li>
-                <li class="list_item">Body Repair</li>
-                <li class="list_item">Painting</li>
-                <li class="list_item">Tire Service</li>
-                <li class="list_item">AC Refill</li>
-                <li class="list_item">Other</li>
+                <li class="list_item">
+                    <span>Automatic transmission repair, but we can replace the entire gearbox or change the oil</span>
+                </li>
+                <li class="list_item">
+                    <span>Body Repair</span>
+                </li>
+                <li class="list_item">
+                    <span>Painting</span>
+                </li>
+                <li class="list_item">
+                    <span>Tire Service</span>
+                </li>
+                <li class="list_item">
+                    <span>AC Refill</span>
+                </li>
+                <li class="list_item">
+                    <span>Other</span>
+                </li>
             </ul>
         </div>
     </div>
@@ -212,14 +219,28 @@
             <img src="..\../../img/ключи_на_стене.jpg" alt="ключи_на_стене">
         </div>
         <div class="content animate-once" data-delay="0.4s">
-            <h2>Your Car in Reliable Hands</h2>
+            <h2>
+                <span>Your Car in Reliable Hands</span>
+            </h2>
             <ul class="list list__big">
-                <li class="list_item">We can always <b>show</b> and explain what's happening with your car.</li>
-                <li class="list_item">We maintain <b>cleanliness</b>, using seat covers, floor mats, and more.</li>
-                <li class="list_item">We work <b>by appointment</b>, respecting your and our time.</li>
-                <li class="list_item">We can compile a list, find or order <b>spare parts</b> and oils.</li>
-                <li class="list_item">We use <b>modern software</b> for auto services and special tools.</li>
-                <li class="list_item">We work <b>officially</b> and provide all necessary documents.</li>
+                <li class="list_item">
+                    <span>We can always <b>show</b> and explain what's happening with your car.</span>
+                </li>
+                <li class="list_item">
+                    <span>We maintain <b>cleanliness</b>, using seat covers, floor mats, and more.</span>
+                </li>
+                <li class="list_item">
+                    <span>We work <b>by appointment</b>, respecting your and our time.</span>
+                </li>
+                <li class="list_item">
+                    <span>We can compile a list, find or order <b>spare parts</b> and oils.</span>
+                </li>
+                <li class="list_item">
+                    <span>We use <b>modern software</b> for auto services and special tools.</span>
+                </li>
+                <li class="list_item">
+                    <span>We work <b>officially</b> and provide all necessary documents.</span>
+                </li>
             </ul>
         </div>
     </div>
@@ -336,41 +357,53 @@
                     <div class="process_img process_img__message">
                         <img src="..\../../img/send-message-64.png" alt>
                     </div>
-                    <div class="process_title">Contact</div>
-                    <div class="process_text">Write to us on <b>social networks</b> or call by phone.</div>
+                    <div class="process_title">
+                        <span>Contact</span>
+                    </div>
+                    <div class="process_text">
+                        <span>Write to us on <b>social networks</b> or call by phone.</span>
+                        <div class="process_text__small">
+                            <span>We recommend specifying the make, model, year and VIN code right away.</span>
+                        </div>
+                    </div>
                 </div>
                 <div class="process_item" id="id1">
                     <div class="process_img process_img__check">
                         <img src="..\../../img/car-check-64.png" alt>
                     </div>
-                    <div class="process_title">Консультация и диагностика</div>
+                    <div class="process_title">
+                        <span>Consultation and Diagnostics</span>
+                    </div>
                     <div class="process_text">
-                        Вы приезжаете в наш сервис, мастер проводит <b>осмотр</b> автомобиля и с Вами согласовывается
-                        стоимость
-                        работ и сроки.
+                        <span>You come to our service, the master <b>inspects</b> the car and agrees with you on the cost of work and deadlines.</span>
                     </div>
                 </div>
                 <div class="process_item" id="id2">
                     <div class="process_img process_img__parts">
                         <img src="..\../../img/brakes-64.png" alt>
                     </div>
-                    <div class="process_title">Запчасти, масла и расходники</div>
+                    <div class="process_title">
+                        <span>Parts, Oils and Consumables</span>
+                    </div>
                     <div class="process_text">
-                        Мы можем подобрать, найти и заказать необходимые <b>запчасти</b>.
+                        <span>We can select, find and order necessary <b>spare parts</b>.</span>
                         <div class="process_text__small">
-                            100% предоплата. При заказе сроки 10-14 дней. Так же доступна установка ваших
-                            запчастей.</div>
+                            <span>100% prepayment. Order lead time 10-14 days. Installation of your parts is also available.</span>
+                        </div>
                     </div>
                 </div>
                 <div class="process_item" id="id3">
                     <div class="process_img process_img__repair">
                         <img src="..\../../img/car-repair-64.png" alt>
                     </div>
-                    <div class="process_title">Ремонт и обслуживание</div>
+                    <div class="process_title">
+                        <span>Repair and Maintenance</span>
+                    </div>
                     <div class="process_text">
-                        Наши мастера проводят все необходимые виды <b>работ</b>.
+                        <span>Our masters perform all necessary types of <b>work</b>.</span>
                         <div class="process_text__small">
-                            Гарантия до 6 месяцев, в зависимости от типа ремонта.</div>
+                            <span>Warranty up to 6 months, depending on the type of repair.</span>
+                        </div>
                     </div>
                 </div>
                 <div class="process_item" id="id4">
@@ -380,12 +413,11 @@
                     <div class="process_img process_img__done">
                         <img src="..\../../img/done-64.png" alt>
                     </div>
-                    <div class="process_title">Можно ехать</div>
+                    <div class="process_title">
+                        <span>Ready to Go</span>
+                    </div>
                     <div class="process_text">
-                        Мы связываемся с Вами, когда работа подходит к концу. Проводится контроль качества. Вы
-                        <b>забираете</b>
-                        автомобиль.
-                        <div class="process_text__small"></div>
+                        <span>We contact you when the work is coming to an end. Quality control is performed. You <b>pick up</b> the car.</span>
                     </div>
                 </div>
             </div>
@@ -415,41 +447,49 @@
         </div>
         <div class="content content_wide animate-once" data-delay="0.4s">
 
-            <h2>Technical Capabilities and Equipment</h2>
+            <h2>
+                <span>Technical capabilities and equipment</span>
+            </h2>
             <ul class="list list_wide list_odd">
-                <li class="list_item">3 Lifts</li>
-                <li class="list_item">Press up to 20 tons</li>
+                <li class="list_item">
+                    <img class="list_item__img" src="..\../../img/suspension.svg" alt>
+                    <span>lifts</span>
+                </li>
+                <li class="list_item">
+                    <img class="list_item__img" src="..\../../img/press.svg" alt>
+                    <span>press</span>
+                </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/welding-machine.svg" alt>
-                    Сварочные: полуавтомат и инвертор
+                    <span>Welding: semi-automatic and inverter</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/air-compressor.svg" alt>
-                    Гайковёрты, компрессор
+                    <span>Wrenches, compressor</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/co2.svg" alt>
-                    Проверка CO₂ в жидкостях
+                    <span>CO₂ check in fluids</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/air.svg" alt>
-                    Дымогенератор
+                    <span>Smoke generator</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/tablet.svg" alt>
-                    Диагностическое оборудование
+                    <span>Diagnostic equipment</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/timing-belt.svg" alt>
-                    Специнструменты, фиксаторы
+                    <span>Special tools, fixtures</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/reparation.svg" alt>
-                    Множество съёмников и ключей
+                    <span>Multiple pullers and wrenches</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/crane.svg" alt>
-                    Кран 1,5 тонны
+                    <span>1.5 ton crane</span>
                 </li>
                 <!-- <li class="list_item">Стенды для проверки форсунок, свечей</li> -->
             </ul>
@@ -483,7 +523,7 @@
 
                 <div class="divider"></div>
 
-                <div class="contacts_text">Наши соц. сети:</div>
+                <div class="contacts_text">Our social networks:</div>
 
                 <ul class="contacts_icons">
                     <li class="contacts_icon">
