--- a/i18n/ka/src/index.html
+++ b/i18n/ka/src/index.html
@@ -23,9 +23,7 @@
             </picture>
         </div>
         <div class="nav-contacts">
-            <a class="sales-link" href="#sales">
-                Акции 🫰
-            </a>
+            <a class="sales-link" href="#sales">აქციები 🫰</a>
             <ul class="contacts_icons">
                 <li class="contacts_icon">
                     <a href="https://www.instagram.com/sto_batumi/">
@@ -84,25 +82,19 @@
                     </div>
                 </li>
                 <li class="list_item number_cnt">
-                    <div class="number_value counter" data-start="0" data-duration="2000">
-                        15 лет
-                    </div>
+                    <div class="number_value counter" data-start="0" data-duration="2000">15 წელი</div>
                     <div class="number_text">
                         <span>მასტერების საშუალო გამოცდილება</span>
                     </div>
                 </li>
                 <li class="list_item number_cnt">
-                    <div class="number_value counter" data-start="0" data-duration="2000">
-                        3 года
-                    </div>
+                    <div class="number_value counter" data-start="0" data-duration="2000">3 წელი</div>
                     <div class="number_text">
                         <span>ბათუმში</span>
                     </div>
                 </li>
                 <li class="list_item number_cnt">
-                    <div class="number_value counter" data-start="0" data-duration="2000">
-                        7 дней
-                    </div>
+                    <div class="number_value counter" data-start="0" data-duration="2000">7 დღე</div>
                     <div class="number_text">
                         <span>კვირაში 7 დღე, 10:00-დან 19:00-მდე</span>
                     </div>
@@ -128,7 +120,7 @@
         </div>
         <div class="content animate-once">
             <h2>
-                <span>ფასდაკლებები და აქციები</span>
+                <span>აქციები და ფასდაკლებები</span>
             </h2>
             <ul class="list list_wide">
                 <li class="list_item">
@@ -155,7 +147,10 @@
         <div class="content content_wide animate-once" data-delay="0.4s">
             <h2>მომსახურება და სპეციალიზაცია</h2>
             <ul class="list list_wide">
-                <li class="list_item">ტექნიკური მომსახურება ☆</li>
+                <li class="list_item">
+                    <img class="list_item__img" src="..\../../img/oil.svg" alt>
+                    <span>ტექნიკური მომსახურება ☆</span>
+                </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/car-repair.svg" alt>
                     <span>დიაგნოსტიკა ☆</span>
@@ -197,12 +192,24 @@
             </ul>
             <h2 class="toggle" data-for="#not">რასაც არ ვაკეთებთ</h2>
             <ul class="list hidden" id="not">
-                <li class="list_item">ავტომატური კოლოფის რემონტი, მაგრამ შეგვიძლია მთლიანად შევცვალოთ ან ზეთი შევცვალოთ</li>
-                <li class="list_item">კუზოვის რემონტი</li>
-                <li class="list_item">ფერწერა</li>
-                <li class="list_item">შინომონტაჟი</li>
-                <li class="list_item">კონდიციონერის დატენვა</li>
-                <li class="list_item">სხვა</li>
+                <li class="list_item">
+                    <span>ავტომატური კოლოფის რემონტი, მაგრამ შეგვიძლია მთლიანად შევცვალოთ ან ზეთი შევცვალოთ</span>
+                </li>
+                <li class="list_item">
+                    <span>კუზოვის რემონტი</span>
+                </li>
+                <li class="list_item">
+                    <span>ფერწერა</span>
+                </li>
+                <li class="list_item">
+                    <span>შინომონტაჟი</span>
+                </li>
+                <li class="list_item">
+                    <span>კონდიციონერის დატენვა</span>
+                </li>
+                <li class="list_item">
+                    <span>სხვა</span>
+                </li>
             </ul>
         </div>
     </div>
@@ -212,14 +219,28 @@
             <img src="..\../../img/ключи_на_стене.jpg" alt="ключи_на_стене">
         </div>
         <div class="content animate-once" data-delay="0.4s">
-            <h2>თქვენი მანქანა საიმედო ხელებშია</h2>
+            <h2>
+                <span>თქვენი მანქანა საიმედო ხელებშია</span>
+            </h2>
             <ul class="list list__big">
-                <li class="list_item">ყოველთვის შეგვიძლია <b>ვაჩვენოთ</b> და გავუხსნათ რა ხდება თქვენს მანქანასთან.</li>
-                <li class="list_item">ვიცავთ <b>სისუფთავეს</b>, ვიყენებთ საფარებს, ხალიჩებს და სხვა.</li>
-                <li class="list_item">ვმუშაობთ <b>ჩაწერით</b>, ვზოგავთ თქვენს და ჩვენს დროს.</li>
-                <li class="list_item">შეგვიძლია შევადგინოთ სია, ვიპოვოთ ან შევუკვეთოთ <b>დამხმარე ნაწილები</b> და ზეთები.</li>
-                <li class="list_item">ვიყენებთ <b>თანამედროვე პროგრამებს</b> ავტოსერვისებისთვის და სპეციალურ ინსტრუმენტებს.</li>
-                <li class="list_item">ვმუშაობთ <b>ოფიციალურად</b> და ვაძლევთ ყველა საჭირო დოკუმენტს.</li>
+                <li class="list_item">
+                    <span>ყოველთვის შეგვიძლია <b>ვაჩვენოთ</b> და გავუხსნათ რა ხდება თქვენს მანქანასთან.</span>
+                </li>
+                <li class="list_item">
+                    <span>ვიცავთ <b>სისუფთავეს</b>, ვიყენებთ საფარებს, ხალიჩებს და სხვა.</span>
+                </li>
+                <li class="list_item">
+                    <span>ვმუშაობთ <b>ჩაწერით</b>, ვზოგავთ თქვენს და ჩვენს დროს.</span>
+                </li>
+                <li class="list_item">
+                    <span>შეგვიძლია შევადგინოთ სია, ვიპოვოთ ან შევუკვეთოთ <b>დამხმარე ნაწილები</b> და ზეთები.</span>
+                </li>
+                <li class="list_item">
+                    <span>ვიყენებთ <b>თანამედროვე პროგრამებს</b> ავტოსერვისებისთვის და სპეციალურ ინსტრუმენტებს.</span>
+                </li>
+                <li class="list_item">
+                    <span>ვმუშაობთ <b>ოფიციალურად</b> და ვაძლევთ ყველა საჭირო დოკუმენტს.</span>
+                </li>
             </ul>
         </div>
     </div>
@@ -336,41 +357,53 @@
                     <div class="process_img process_img__message">
                         <img src="..\../../img/send-message-64.png" alt>
                     </div>
-                    <div class="process_title">კონტაქტი</div>
-                    <div class="process_text">დაგვიწერეთ <b>სოციალურ ქსელებში</b> ან დაგვირეკეთ.</div>
+                    <div class="process_title">
+                        <span>კონტაქტი</span>
+                    </div>
+                    <div class="process_text">
+                        <span>დაგვიწერეთ <b>სოციალურ ქსელებში</b> ან დაგვირეკეთ.</span>
+                        <div class="process_text__small">
+                            <span>გირჩევთ დაუყოვნებლივ მიუთითოთ მარკა, მოდელი, წელი და VIN კოდი.</span>
+                        </div>
+                    </div>
                 </div>
                 <div class="process_item" id="id1">
                     <div class="process_img process_img__check">
                         <img src="..\../../img/car-check-64.png" alt>
                     </div>
-                    <div class="process_title">Консультация и диагностика</div>
+                    <div class="process_title">
+                        <span>კონსულტაცია და დიაგნოსტიკა</span>
+                    </div>
                     <div class="process_text">
-                        Вы приезжаете в наш сервис, мастер проводит <b>осмотр</b> автомобиля и с Вами согласовывается
-                        стоимость
-                        работ и сроки.
+                        <span>თქვენ მოდიხართ ჩვენს სერვისში, ოსტატი ახორციელებს მანქანის <b>ინსპექტირებას</b> და თანხმდება თქვენთან სამუშაოს ღირებულებასა და ვადებზე.</span>
                     </div>
                 </div>
                 <div class="process_item" id="id2">
                     <div class="process_img process_img__parts">
                         <img src="..\../../img/brakes-64.png" alt>
                     </div>
-                    <div class="process_title">Запчасти, масла и расходники</div>
+                    <div class="process_title">
+                        <span>ნაწილები, ზეთები და სახარჯი მასალები</span>
+                    </div>
                     <div class="process_text">
-                        Мы можем подобрать, найти и заказать необходимые <b>запчасти</b>.
+                        <span>შეგვიძლია შევარჩიოთ, ვიპოვოთ და შევუკვეთოთ საჭირო <b>ნაწილები</b>.</span>
                         <div class="process_text__small">
-                            100% предоплата. При заказе сроки 10-14 дней. Так же доступна установка ваших
-                            запчастей.</div>
+                            <span>100% წინასწარ გადახდა. შეკვეთის ვადა 10-14 დღე. ასევე ხელმისაწვდომია თქვენი ნაწილების მონტაჟი.</span>
+                        </div>
                     </div>
                 </div>
                 <div class="process_item" id="id3">
                     <div class="process_img process_img__repair">
                         <img src="..\../../img/car-repair-64.png" alt>
                     </div>
-                    <div class="process_title">Ремонт и обслуживание</div>
+                    <div class="process_title">
+                        <span>რემონტი და მოვლა</span>
+                    </div>
                     <div class="process_text">
-                        Наши мастера проводят все необходимые виды <b>работ</b>.
+                        <span>ჩვენი ოსტატები ასრულებენ ყველა საჭირო სახის <b>სამუშაოს</b>.</span>
                         <div class="process_text__small">
-                            Гарантия до 6 месяцев, в зависимости от типа ремонта.</div>
+                            <span>გარანტია 6 თვემდე, რემონტის ტიპის მიხედვით.</span>
+                        </div>
                     </div>
                 </div>
                 <div class="process_item" id="id4">
@@ -380,12 +413,11 @@
                     <div class="process_img process_img__done">
                         <img src="..\../../img/done-64.png" alt>
                     </div>
-                    <div class="process_title">Можно ехать</div>
+                    <div class="process_title">
+                        <span>მზადაა გასვლა</span>
+                    </div>
                     <div class="process_text">
-                        Мы связываемся с Вами, когда работа подходит к концу. Проводится контроль качества. Вы
-                        <b>забираете</b>
-                        автомобиль.
-                        <div class="process_text__small"></div>
+                        <span>ჩვენ დაგიკავშირდებით, როდესაც სამუშაო დასრულებისკენ მიდის. ხორციელდება ხარისხის კონტროლი. თქვენ <b>იღებთ</b> მანქანას.</span>
                     </div>
                 </div>
             </div>
@@ -415,41 +447,49 @@
         </div>
         <div class="content content_wide animate-once" data-delay="0.4s">
 
-            <h2>ტექნიკური შესაძლებლობები და აღჭურვილობა</h2>
+            <h2>
+                <span>ტექნიკური შესაძლებლობები და აღჭურვილობა</span>
+            </h2>
             <ul class="list list_wide list_odd">
-                <li class="list_item">3 ამწე</li>
-                <li class="list_item">პრესი 20 ტონამდე</li>
+                <li class="list_item">
+                    <img class="list_item__img" src="..\../../img/suspension.svg" alt>
+                    <span>lifts</span>
+                </li>
+                <li class="list_item">
+                    <img class="list_item__img" src="..\../../img/press.svg" alt>
+                    <span>press</span>
+                </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/welding-machine.svg" alt>
-                    Сварочные: полуавтомат и инвертор
+                    <span>შედუღება: ნახევრად ავტომატური და ინვერტორი</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/air-compressor.svg" alt>
-                    Гайковёрты, компрессор
+                    <span>გასაღებები, კომპრესორი</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/co2.svg" alt>
-                    Проверка CO₂ в жидкостях
+                    <span>CO₂-ის შემოწმება სითხეებში</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/air.svg" alt>
-                    Дымогенератор
+                    <span>წვის გენერატორი</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/tablet.svg" alt>
-                    Диагностическое оборудование
+                    <span>დიაგნოსტიკური აღჭურვილობა</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/timing-belt.svg" alt>
-                    Специнструменты, фиксаторы
+                    <span>სპეციალური ხელსაწყოები, ფიქსატორები</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/reparation.svg" alt>
-                    Множество съёмников и ключей
+                    <span>მრავალი ამწევი და გასაღები</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/crane.svg" alt>
-                    Кран 1,5 тонны
+                    <span>1.5 ტონიანი ამწე</span>
                 </li>
                 <!-- <li class="list_item">Стенды для проверки форсунок, свечей</li> -->
             </ul>
@@ -483,7 +523,7 @@
 
                 <div class="divider"></div>
 
-                <div class="contacts_text">Наши соц. сети:</div>
+                <div class="contacts_text">ჩვენი სოციალური ქსელები:</div>
 
                 <ul class="contacts_icons">
                     <li class="contacts_icon">
