--- a/i18n/src/index.html
+++ b/i18n/src/index.html
@@ -23,9 +23,7 @@
             </picture>
         </div>
         <div class="nav-contacts">
-            <a class="sales-link" href="#sales">
-                Акции 🫰
-            </a>
+            <a class="sales-link" href="#sales">Акции 🫰</a>
             <ul class="contacts_icons">
                 <li class="contacts_icon">
                     <a href="https://www.instagram.com/sto_batumi/">
@@ -84,25 +82,19 @@
                     </div>
                 </li>
                 <li class="list_item number_cnt">
-                    <div class="number_value counter" data-start="0" data-duration="2000">
-                        15 лет
-                    </div>
+                    <div class="number_value counter" data-start="0" data-duration="2000">15 лет</div>
                     <div class="number_text">
                         <span>средний стаж мастеров</span>
                     </div>
                 </li>
                 <li class="list_item number_cnt">
-                    <div class="number_value counter" data-start="0" data-duration="2000">
-                        3 года
-                    </div>
+                    <div class="number_value counter" data-start="0" data-duration="2000">3 года</div>
                     <div class="number_text">
                         <span>в Батуми</span>
                     </div>
                 </li>
                 <li class="list_item number_cnt">
-                    <div class="number_value counter" data-start="0" data-duration="2000">
-                        7 дней
-                    </div>
+                    <div class="number_value counter" data-start="0" data-duration="2000">7 дней</div>
                     <div class="number_text">
                         <span>в неделю, с 10 до 19</span>
                     </div>
@@ -155,7 +147,10 @@
         <div class="content content_wide animate-once" data-delay="0.4s">
             <h2>Услуги и специализация</h2>
             <ul class="list list_wide">
-                <li class="list_item">Техническое обслуживание ☆</li>
+                <li class="list_item">
+                    <img class="list_item__img" src="../../img/oil.svg" alt>
+                    <span>Техническое обслуживание ☆</span>
+                </li>
                 <li class="list_item">
                     <img class="list_item__img" src="../../img/car-repair.svg" alt>
                     <span>Диагностика ☆</span>
@@ -197,12 +192,24 @@
             </ul>
             <h2 class="toggle" data-for="#not">Чем мы НЕ занимаемся</h2>
             <ul class="list hidden" id="not">
-                <li class="list_item">Ремонт АКПП, но можем заменить коробку целиком или поменять масло</li>
-                <li class="list_item">Кузовной ремонт</li>
-                <li class="list_item">Покраска</li>
-                <li class="list_item">Шиномонтаж</li>
-                <li class="list_item">Заправка кондиционеров</li>
-                <li class="list_item">Хернёй</li>
+                <li class="list_item">
+                    <span>Ремонт АКПП, но можем заменить коробку целиком или поменять масло</span>
+                </li>
+                <li class="list_item">
+                    <span>Кузовной ремонт</span>
+                </li>
+                <li class="list_item">
+                    <span>Покраска</span>
+                </li>
+                <li class="list_item">
+                    <span>Шиномонтаж</span>
+                </li>
+                <li class="list_item">
+                    <span>Заправка кондиционеров</span>
+                </li>
+                <li class="list_item">
+                    <span>Хернёй</span>
+                </li>
             </ul>
         </div>
     </div>
@@ -212,14 +219,28 @@
             <img src="../../img/ключи_на_стене.jpg" alt="ключи_на_стене">
         </div>
         <div class="content animate-once" data-delay="0.4s">
-            <h2>Ваш автомобиль в надежных руках</h2>
+            <h2>
+                <span>Ваш автомобиль в надежных руках</span>
+            </h2>
             <ul class="list list__big">
-                <li class="list_item">Всегда можем <b>показать</b> и рассказать, что происходит с автомобилем.</li>
-                <li class="list_item">Соблюдаем <b>чистоту</b>, используем накидки на сидения, коврики и не только.</li>
-                <li class="list_item">Работаем <b>по записи</b>, бережём своё и Ваше время.</li>
-                <li class="list_item">Можем сами составить список, найти или заказать <b>запчасти</b> и масла.</li>
-                <li class="list_item">Используем <b>современное ПО</b> для автосервисов и специнструменты.</li>
-                <li class="list_item">Работаем <b>официально</b> и предоставляем все необходимые документы.</li>
+                <li class="list_item">
+                    <span>Всегда можем <b>показать</b> и рассказать, что происходит с автомобилем.</span>
+                </li>
+                <li class="list_item">
+                    <span>Соблюдаем <b>чистоту</b>, используем накидки на сидения, коврики и не только.</span>
+                </li>
+                <li class="list_item">
+                    <span>Работаем <b>по записи</b>, бережём своё и Ваше время.</span>
+                </li>
+                <li class="list_item">
+                    <span>Можем сами составить список, найти или заказать <b>запчасти</b> и масла.</span>
+                </li>
+                <li class="list_item">
+                    <span>Используем <b>современное ПО</b> для автосервисов и специнструменты.</span>
+                </li>
+                <li class="list_item">
+                    <span>Работаем <b>официально</b> и предоставляем все необходимые документы.</span>
+                </li>
             </ul>
         </div>
     </div>
@@ -336,41 +357,53 @@
                     <div class="process_img process_img__message">
                         <img src="../../img/send-message-64.png" alt>
                     </div>
-                    <div class="process_title">Обращение</div>
-                    <div class="process_text">Пишите нам <b>соц. сети</b> или звоните по телефону.</div>
+                    <div class="process_title">
+                        <span>Обращение</span>
+                    </div>
+                    <div class="process_text">
+                        <span>Пишите нам <b>соц. сети</b> или звоните по телефону.</span>
+                        <div class="process_text__small">
+                            <span>Рекомендуем сразу указать марку, модель, год и VIN код.</span>
+                        </div>
+                    </div>
                 </div>
                 <div class="process_item" id="id1">
                     <div class="process_img process_img__check">
                         <img src="../../img/car-check-64.png" alt>
                     </div>
-                    <div class="process_title">Консультация и диагностика</div>
+                    <div class="process_title">
+                        <span>Консультация и диагностика</span>
+                    </div>
                     <div class="process_text">
-                        Вы приезжаете в наш сервис, мастер проводит <b>осмотр</b> автомобиля и с Вами согласовывается
-                        стоимость
-                        работ и сроки.
+                        <span>Вы приезжаете в наш сервис, мастер проводит <b>осмотр</b> автомобиля и с Вами согласовывается стоимость работ и сроки.</span>
                     </div>
                 </div>
                 <div class="process_item" id="id2">
                     <div class="process_img process_img__parts">
                         <img src="../../img/brakes-64.png" alt>
                     </div>
-                    <div class="process_title">Запчасти, масла и расходники</div>
+                    <div class="process_title">
+                        <span>Запчасти, масла и расходники</span>
+                    </div>
                     <div class="process_text">
-                        Мы можем подобрать, найти и заказать необходимые <b>запчасти</b>.
+                        <span>Мы можем подобрать, найти и заказать необходимые <b>запчасти</b>.</span>
                         <div class="process_text__small">
-                            100% предоплата. При заказе сроки 10-14 дней. Так же доступна установка ваших
-                            запчастей.</div>
+                            <span>100% предоплата. При заказе сроки 10-14 дней. Так же доступна установка ваших запчастей.</span>
+                        </div>
                     </div>
                 </div>
                 <div class="process_item" id="id3">
                     <div class="process_img process_img__repair">
                         <img src="../../img/car-repair-64.png" alt>
                     </div>
-                    <div class="process_title">Ремонт и обслуживание</div>
+                    <div class="process_title">
+                        <span>Ремонт и обслуживание</span>
+                    </div>
                     <div class="process_text">
-                        Наши мастера проводят все необходимые виды <b>работ</b>.
+                        <span>Наши мастера проводят все необходимые виды <b>работ</b>.</span>
                         <div class="process_text__small">
-                            Гарантия до 6 месяцев, в зависимости от типа ремонта.</div>
+                            <span>Гарантия до 6 месяцев, в зависимости от типа ремонта.</span>
+                        </div>
                     </div>
                 </div>
                 <div class="process_item" id="id4">
@@ -380,12 +413,11 @@
                     <div class="process_img process_img__done">
                         <img src="../../img/done-64.png" alt>
                     </div>
-                    <div class="process_title">Можно ехать</div>
+                    <div class="process_title">
+                        <span>Можно ехать</span>
+                    </div>
                     <div class="process_text">
-                        Мы связываемся с Вами, когда работа подходит к концу. Проводится контроль качества. Вы
-                        <b>забираете</b>
-                        автомобиль.
-                        <div class="process_text__small"></div>
+                        <span>Мы связываемся с Вами, когда работа подходит к концу. Проводится контроль качества. Вы <b>забираете</b> автомобиль.</span>
                     </div>
                 </div>
             </div>
@@ -415,41 +447,49 @@
         </div>
         <div class="content content_wide animate-once" data-delay="0.4s">
 
-            <h2>Технические возможности и оборудование</h2>
+            <h2>
+                <span>Технические возможности и оборудование</span>
+            </h2>
             <ul class="list list_wide list_odd">
-                <li class="list_item">3 подъёмника</li>
-                <li class="list_item">Пресс до 20 тонн</li>
+                <li class="list_item">
+                    <img class="list_item__img" src="../../img/suspension.svg" alt>
+                    <span>lifts</span>
+                </li>
+                <li class="list_item">
+                    <img class="list_item__img" src="../../img/press.svg" alt>
+                    <span>press</span>
+                </li>
                 <li class="list_item">
                     <img class="list_item__img" src="../../img/welding-machine.svg" alt>
-                    Сварочные: полуавтомат и инвертор
+                    <span>Сварочные: полуавтомат и инвертор</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="../../img/air-compressor.svg" alt>
-                    Гайковёрты, компрессор
+                    <span>Гайковёрты, компрессор</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="../../img/co2.svg" alt>
-                    Проверка CO₂ в жидкостях
+                    <span>Проверка CO₂ в жидкостях</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="../../img/air.svg" alt>
-                    Дымогенератор
+                    <span>Дымогенератор</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="../../img/tablet.svg" alt>
-                    Диагностическое оборудование
+                    <span>Диагностическое оборудование</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="../../img/timing-belt.svg" alt>
-                    Специнструменты, фиксаторы
+                    <span>Специнструменты, фиксаторы</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="../../img/reparation.svg" alt>
-                    Множество съёмников и ключей
+                    <span>Множество съёмников и ключей</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="../../img/crane.svg" alt>
-                    Кран 1,5 тонны
+                    <span>Кран 1,5 тонны</span>
                 </li>
                 <!-- <li class="list_item">Стенды для проверки форсунок, свечей</li> -->
             </ul>
