--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
             </picture>
         </div>
         <div class="nav-contacts">
-            <a class="sales-link" href="#sales">
+            <a class="sales-link" href="#sales" data-t="sales_and_discounts_header">
                 Акции 🫰
             </a>
             <ul class="contacts_icons">
@@ -85,7 +85,7 @@
                     </div>
                 </li>
                 <li class="list_item number_cnt">
-                    <div class="number_value counter" data-start="0" data-duration="2000">
+                    <div class="number_value counter" data-start="0" data-duration="2000" data-t="years_experience">
                         15 лет
                     </div>
                     <div class="number_text">
@@ -93,7 +93,7 @@
                     </div>
                 </li>
                 <li class="list_item number_cnt">
-                    <div class="number_value counter" data-start="0" data-duration="2000">
+                    <div class="number_value counter" data-start="0" data-duration="2000" data-t="years_in_batumi">
                         3 года
                     </div>
                     <div class="number_text">
@@ -101,7 +101,7 @@
                     </div>
                 </li>
                 <li class="list_item number_cnt">
-                    <div class="number_value counter" data-start="0" data-duration="2000">
+                    <div class="number_value counter" data-start="0" data-duration="2000" data-t="days_working">
                         7 дней
                     </div>
                     <div class="number_text">
@@ -203,12 +203,13 @@
                 </li>
 
             </ul>
-            <h2 class="toggle" data-for="#not">
-                <span data-t="what_we_dont_do">Чем мы НЕ занимаемся</span>
+            <h2 class="toggle" data-for="#not" data-t="what_we_dont_do">
+                Чем мы НЕ занимаемся
             </h2>
             <ul class="list hidden" id="not">
                 <li class="list_item">
-                    <span data-t="automatic_transmission">Ремонт АКПП, но можем заменить коробку целиком или поменять масло</span>
+                    <span data-t="automatic_transmission">Ремонт АКПП, но можем заменить коробку целиком или поменять
+                        масло</span>
                 </li>
                 <li class="list_item">
                     <span data-t="body_repair">Кузовной ремонт</span>
@@ -239,22 +240,27 @@
             </h2>
             <ul class="list list__big">
                 <li class="list_item">
-                    <span data-t="show_and_tell">Всегда можем <b>показать</b> и рассказать, что происходит с автомобилем.</span>
+                    <span data-t="show_and_tell">Всегда можем <b>показать</b> и рассказать, что происходит с
+                        автомобилем.</span>
                 </li>
                 <li class="list_item">
-                    <span data-t="cleanliness">Соблюдаем <b>чистоту</b>, используем накидки на сидения, коврики и не только.</span>
+                    <span data-t="cleanliness">Соблюдаем <b>чистоту</b>, используем накидки на сидения, коврики и не
+                        только.</span>
                 </li>
                 <li class="list_item">
                     <span data-t="by_appointment">Работаем <b>по записи</b>, бережём своё и Ваше время.</span>
                 </li>
                 <li class="list_item">
-                    <span data-t="parts_ordering">Можем сами составить список, найти или заказать <b>запчасти</b> и масла.</span>
+                    <span data-t="parts_ordering">Можем сами составить список, найти или заказать <b>запчасти</b> и
+                        масла.</span>
                 </li>
                 <li class="list_item">
-                    <span data-t="modern_software">Используем <b>современное ПО</b> для автосервисов и специнструменты.</span>
+                    <span data-t="modern_software">Используем <b>современное ПО</b> для автосервисов и
+                        специнструменты.</span>
                 </li>
                 <li class="list_item">
-                    <span data-t="official_work">Работаем <b>официально</b> и предоставляем все необходимые документы.</span>
+                    <span data-t="official_work">Работаем <b>официально</b> и предоставляем все необходимые
+                        документы.</span>
                 </li>
             </ul>
         </div>
@@ -379,7 +385,8 @@
                     <div class="process_text">
                         <span data-t="contact_description">Пишите нам <b>соц. сети</b> или звоните по телефону.</span>
                         <div class="process_text__small">
-                            <span data-t="contact_recommendation">Рекомендуем сразу указать марку, модель, год и VIN код.</span>
+                            <span data-t="contact_recommendation">Рекомендуем сразу указать марку, модель, год и VIN
+                                код.</span>
                         </div>
                     </div>
                 </div>
@@ -391,7 +398,8 @@
                         <span data-t="consultation_and_diagnostics">Консультация и диагностика</span>
                     </div>
                     <div class="process_text">
-                        <span data-t="diagnostics_description">Вы приезжаете в наш сервис, мастер проводит <b>осмотр</b> автомобиля и с Вами согласовывается стоимость работ и сроки.</span>
+                        <span data-t="diagnostics_description">Вы приезжаете в наш сервис, мастер проводит <b>осмотр</b>
+                            автомобиля и с Вами согласовывается стоимость работ и сроки.</span>
                     </div>
                 </div>
                 <div class="process_item" id="id2">
@@ -402,9 +410,11 @@
                         <span data-t="parts_and_oils">Запчасти, масла и расходники</span>
                     </div>
                     <div class="process_text">
-                        <span data-t="parts_description">Мы можем подобрать, найти и заказать необходимые <b>запчасти</b>.</span>
+                        <span data-t="parts_description">Мы можем подобрать, найти и заказать необходимые
+                            <b>запчасти</b>.</span>
                         <div class="process_text__small">
-                            <span data-t="parts_payment">100% предоплата. При заказе сроки 10-14 дней. Так же доступна установка ваших запчастей.</span>
+                            <span data-t="parts_payment">100% предоплата. При заказе сроки 10-14 дней. Так же доступна
+                                установка ваших запчастей.</span>
                         </div>
                     </div>
                 </div>
@@ -416,7 +426,8 @@
                         <span data-t="repair_and_maintenance">Ремонт и обслуживание</span>
                     </div>
                     <div class="process_text">
-                        <span data-t="repair_description">Наши мастера проводят все необходимые виды <b>работ</b>.</span>
+                        <span data-t="repair_description">Наши мастера проводят все необходимые виды
+                            <b>работ</b>.</span>
                         <div class="process_text__small">
                             <span data-t="warranty">Гарантия до 6 месяцев, в зависимости от типа ремонта.</span>
                         </div>
@@ -433,7 +444,8 @@
                         <span data-t="ready_to_go">Можно ехать</span>
                     </div>
                     <div class="process_text">
-                        <span data-t="completion_description">Мы связываемся с Вами, когда работа подходит к концу. Проводится контроль качества. Вы <b>забираете</b> автомобиль.</span>
+                        <span data-t="completion_description">Мы связываемся с Вами, когда работа подходит к концу.
+                            Проводится контроль качества. Вы <b>забираете</b> автомобиль.</span>
                     </div>
                 </div>
             </div>
@@ -541,7 +553,7 @@
 
                 <div class="divider"></div>
 
-                <div class="contacts_text">Наши соц. сети:</div>
+                <div class="contacts_text" data-t="social_networks">Наши соц. сети:</div>
 
                 <ul class="contacts_icons">
                     <li class="contacts_icon">
